
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2023 OCT 11b
  * in model/fluid/_*/fluid_source.c
    - in find_dSchem_dU(), renamed dSchemdU to dS_dU


2023 OCT 11a
  * in model/chem/_C2H4_Air_23s/chem.c
    - in reaction [26], made sure the temperature does not fall below 500 K
  * in model/chem/_C2H4_Air_Plasma_36s/adamovich2023e.c
    - in reaction [130], made sure the temperature does not fall below 500 K
  * in model/fluid/_*/fluid_source.c
    - in find_dSchem_dU(), added code at the end to make sure the diagonal elements of the
      Jacobian are not positive
  * in model/share/chem_share.c
    - in add_to_dW_*_*_Lindemann(), updated the "Updated Equations"
      

2023 OCT 08a
  * in src/common.h
    - added a fake omp_lock_t when OPENMPTHREADS is not defined
  * in src/control.c
    - in reduce_wall_distance_given_wallxyz(), added calls to omp lock and unlock
      before writing the wall distance at one node
    - in find_wall_distance(), added omp_init_lock(), initialized nodelock and passed it as a
      parameter to reduce_wall_distance_given_wallxyz()


2023 OCT 06a
  * in cycle/share/cycle_share.c
    - in add_to_averaged_rates(), now calls find_Sstar() instead of find_Schem()
  * in model/chem/_NH3_Plasma_10s/bavafa2008.c
    - made reactions 1-4 implicit again
  * renamed:
    - _AVERAGEDRATES to _AVERAGEDRATES_CHEM
    - numaveragedrates to numaveragedrates_chem
    - averagedrates_react to averagedrates_chem_id
  * in model/fluid/_Navier-Stokes_plasma/fluid.hh
    - added _AVERAGEDRATES section
  * in model/fluid/_Navier-Stokes_plasma/fluid_source.c
    - in find_Semfield(), now calls _averaged_rate() when calculating S[fluxet]
  * in model/share/chem_share.c
    - removed _averaged_rate()
  * in model/share/model_share.c